<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_marginLeft="45px"
            android:gravity="center_vertical"
            android:text="@string/mode_manual"
            android:textColor="#4F5C7A"
            android:textSize="42px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#22000000" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="45px"
                android:background="@mipmap/go_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="243px"
                android:gravity="center_vertical"
                android:text="@string/mode_home"
                android:textColor="#4F5C7A"
                android:textSize="46px" />

            <Button
                android:id="@+id/button"
                android:layout_width="140px"
                android:layout_height="80px"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="45px"
                android:background="@drawable/button_selector"
                android:text="@string/execute"
                android:textColor="@drawable/text_color_selector"
                android:textSize="36px" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#22000000" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="45px"
                android:background="@mipmap/leave_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="243px"
                android:gravity="center_vertical"
                android:text="@string/mode_leaving"
                android:textColor="#4F5C7A"
                android:textSize="46px" />

            <Button
                android:id="@+id/button1"
                android:layout_width="140px"
                android:layout_height="80px"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="45px"
                android:background="@drawable/button_selector"
                android:text="@string/execute"
                android:textColor="@drawable/text_color_selector"
                android:textSize="36px" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#22000000" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="45px"
                android:background="@mipmap/viewing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="243px"
                android:gravity="center_vertical"
                android:text="@string/mode_viewing"
                android:textColor="#4F5C7A"
                android:textSize="46px" />

            <Button
                android:id="@+id/button2"
                android:layout_width="140px"
                android:layout_height="80px"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="45px"
                android:background="@drawable/button_selector"
                android:text="@string/execute"
                android:textColor="@drawable/text_color_selector"
                android:textSize="36px" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#22000000" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="45px"
                android:background="@mipmap/dinner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="243px"
                android:gravity="center_vertical"
                android:text="@string/mode_dinner"
                android:textColor="#4F5C7A"
                android:textSize="46px" />

            <Button
                android:id="@+id/button3"
                android:layout_width="140px"
                android:layout_height="80px"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="45px"
                android:background="@drawable/button_selector"
                android:text="@string/execute"
                android:textColor="@drawable/text_color_selector"
                android:textSize="36px" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#22000000" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="45px"
                android:background="@mipmap/sleep" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="243px"
                android:gravity="center_vertical"
                android:text="@string/mode_sleep"
                android:textColor="#4F5C7A"
                android:textSize="46px" />

            <Button
                android:id="@+id/button4"
                android:layout_width="140px"
                android:layout_height="80px"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="45px"
                android:background="@drawable/button_selector"
                android:text="@string/execute"
                android:textColor="@drawable/text_color_selector"
                android:textSize="36px" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#22000000" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="45px"
                android:background="@mipmap/getup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="243px"
                android:gravity="center_vertical"
                android:text="@string/mode_wake"
                android:textColor="#4F5C7A"
                android:textSize="46px" />

            <Button
                android:id="@+id/button5"
                android:layout_width="140px"
                android:layout_height="80px"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="45px"
                android:background="@drawable/button_selector"
                android:text="@string/execute"
                android:textColor="@drawable/text_color_selector"
                android:textSize="36px" />

        </FrameLayout>

<!--        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#22000000"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220px"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="45px"
                android:background="@mipmap/bath" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="243px"
                android:gravity="center_vertical"
                android:text="关闭调试"
                android:textColor="#4F5C7A"
                android:textSize="46px" />

            <Button
                android:id="@+id/button6"
                android:layout_width="140px"
                android:layout_height="80px"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="45px"
                android:background="@drawable/button_selector"
                android:text="@string/execute"
                android:textColor="@drawable/text_color_selector"
                android:textSize="36px" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#22000000"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220px"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="45px"
                android:background="@mipmap/entertainment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="243px"
                android:gravity="center_vertical"
                android:text="打开调试"
                android:textColor="#4F5C7A"
                android:textSize="46px" />

            <Button
                android:id="@+id/button7"
                android:layout_width="140px"
                android:layout_height="80px"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="45px"
                android:background="@drawable/button_selector"
                android:text="@string/execute"
                android:textColor="@drawable/text_color_selector"
                android:textSize="36px" />

        </FrameLayout>-->
    </LinearLayout>

</ScrollView>